--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -7,9 +7,9 @@
     <title>Hello World</title>
 </head>
 <body>
-    <h1>Hello World!!!</h1>
+    <h1>Hello World!!!
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat natus at labore perferendis animi sapiente ullam eius autem ea. Magnam eos ducimus dignissimos, esse nesciunt quasi porro. Eveniet, repellat excepturi.</p>
 
-    <script src="js/HelloWorld.js"></script>
+    <script src="js/Somma.js"></script>
 </body>
 </html>
